added get started section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,27 @@
       </div>
     </div>
 
-    <!-- GETTING STARTED -->
+    <!-- GETTING STARTED(GS) -->
+    <div class="gs-1">
+      <div class="gs-2">
+        <div class="gs-content">
+          <h2 class="gs-heading">
+            Getting started with Albino is easier than ever
+          </h2>
+          <p class="gs-text">
+            With lots of unique blocks, you can easily build a page without
+            coding. Build your next landing page so quickly with Albino.
+          </p>
+          <button class="btn-1">Get started for free &rarr;</button>
+        </div>
+
+        <img
+          src="img/gs-img.svg"
+          alt="get-started-image"
+          height="487px"
+          class="gs-img"
+        />
+      </div>
+    </div>
   </body>
 </html>
