--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div class="features">
         <div class="feature">
           <img src="img/code.svg" alt="code-icon" class="feature-icon" />
-          <h4 class="feature-heading">Project management</h4>
+          <h4 class="sub-section">Project management</h4>
           <p class="feature-p">
             With lots of unique blocks, you can easily build a page without
             coding. Build your next landing page.
@@ -49,7 +49,7 @@
             alt="countdown-icon"
             class="feature-icon"
           />
-          <h4 class="feature-heading">Time tracking</h4>
+          <h4 class="sub-section">Time tracking</h4>
           <p class="feature-p">
             With lots of unique blocks, you can easily build a page without
             coding. Build your next landing page.
@@ -61,7 +61,7 @@
             alt="countdown-icon"
             class="feature-icon"
           />
-          <h4 class="feature-heading">Beautiful mobile app</h4>
+          <h4 class="sub-section">Beautiful mobile app</h4>
           <p class="feature-p">
             With lots of unique blocks, you can easily build a page without
             coding. Build your next landing page.
@@ -74,7 +74,7 @@
     <div class="gs-1">
       <div class="gs-2">
         <div class="gs-content">
-          <h2 class="gs-heading">
+          <h2 class="section-heading">
             Getting started with Albino is easier than ever
           </h2>
           <p class="gs-text">
@@ -92,5 +92,136 @@
         />
       </div>
     </div>
+
+    <!-- STATISTICS -->
+    <div class="stat">
+      <h2 class="stat-value">1M+</h2>
+      <p class="stat.text">Customers visit Albino every months</p>
+    </div>
+    <div class="stat">
+      <h2 class="stat-value">93%</h2>
+      <p class="stat.tex">Satisfaction rate from our customers.</p>
+    </div>
+    <div class="stat">
+      <h2 class="stat-value">4.9</h2>
+      <p class="stat.tex">Average customer ratings out of 5.00!</p>
+    </div>
+
+    <!-- MANAGE -->
+    <div class="manage">
+      <h2 class="section-heading">Manage your projects fast</h2>
+      <p class="supporting-text">
+        With lots of unique blocks, you can easily build a page without coding.
+        Build your next landing page.
+      </p>
+    </div>
+
+    <div class="manage-1">
+      <img src="img/Img-manage.svg" alt="manage-image" class="manage-image" />
+      <div class="processes">
+        <div class="process">
+          <h3 class="manage-number">1</h3>
+          <div>
+            <h4 class="sub-section">Create a project</h4>
+            <p class="feature-p">
+              With lots of unique blocks, you can easily build a page without
+              coding.
+            </p>
+          </div>
+        </div>
+
+        <div class="process">
+          <h3 class="manage-number">2</h3>
+          <div>
+            <h4 class="sub-section">Assign related people</h4>
+            <p class="feature-p">
+              With lots of unique blocks, you can easily build a page without
+              coding.
+            </p>
+          </div>
+        </div>
+
+        <div class="process">
+          <h3 class="manage-number">2</h3>
+          <div>
+            <h4 class="sub-section">Make it done on-time</h4>
+            <p class="feature-p">
+              With lots of unique blocks, you can easily build a page without
+              coding.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- REVIEWS -->
+    <div class="review-container">
+      <div class="reviews">
+        <div class="review">
+          <img src="img/img-review-1.svg" alt="review-img" />
+          <h3 class="review-heading">"You made is so simple"</h3>
+          <p class="review-p">
+            My new site is so much faster and easier to work with than my old
+            site.
+          </p>
+          <h5 class="review-name">Corey Valdez</h5>
+          <p class="review-occupation">Founder at Zenix</p>
+        </div>
+
+        <div class="review">
+          <img src="img/img-review-1.svg" alt="review-img" />
+          <h3 class="review-heading">“Simply the best”</h3>
+          <p class="review-p">
+            Better than all the rest. I’d recommend this product to beginners.
+          </p>
+          <h5 class="review-name">Ian Klein</h5>
+          <p class="review-occupation">Digital Marketer</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- PRICING & PLAN -->
+    <div class="pricing-container">
+      <h2 class="section-heading">Pricing & Plans</h2>
+      <p class="supporting-text">
+        With lots of unique blocks, you can easily build a page without coding.
+        Build your next landing page.
+      </p>
+
+      <div class="pricing-card">
+        <p class="pricing-level">BASIC</p>
+        <h2 class="stat-value">$29</h2>
+        <p class="ptext-1">One time purchase</p>
+        <p class="ptext-2">
+          With lots of unique blocks, you can easily build a page without
+          coding. Build your next landing page.
+        </p>
+        <button class="pricing-btn">Get started for free</button>
+      </div>
+
+      <div class="pricing-card">
+        <p class="pricing-level">STANDARD</p>
+        <h2 class="stat-value">$49</h2>
+        <p class="ptext-1">One time purchase</p>
+        <p class="ptext-2">
+          With lots of unique blocks, you can easily build a page without
+          coding. Build your next landing page.
+        </p>
+        <button class="pricing-btn">Get started for free</button>
+      </div>
+
+      <div class="pricing-card">
+        <p class="pricing-level">PREMIUM</p>
+        <h2 class="stat-value">$99</h2>
+        <p class="ptext-1">One time purchase</p>
+        <p class="ptext-2">
+          With lots of unique blocks, you can easily build a page without
+          coding. Build your next landing page.
+        </p>
+        <button class="pricing-btn">Get started for free</button>
+      </div>
+    </div>
+
+    <!--PRICING SUBSECTION -->
   </body>
 </html>
