updated the UI and remain the last CTA and footer

--- a/index.html
+++ b/index.html
@@ -94,22 +94,24 @@
     </div>
 
     <!-- STATISTICS -->
-    <div class="stat">
-      <h2 class="stat-value">1M+</h2>
-      <p class="stat.text">Customers visit Albino every months</p>
-    </div>
-    <div class="stat">
-      <h2 class="stat-value">93%</h2>
-      <p class="stat.tex">Satisfaction rate from our customers.</p>
-    </div>
-    <div class="stat">
-      <h2 class="stat-value">4.9</h2>
-      <p class="stat.tex">Average customer ratings out of 5.00!</p>
+    <div class="stats">
+      <div class="stat">
+        <h2 class="stat-value">1M+</h2>
+        <p class="stat-text">Customers visit Albino every months</p>
+      </div>
+      <div class="stat">
+        <h2 class="stat-value">93%</h2>
+        <p class="stat-text">Satisfaction rate from our customers.</p>
+      </div>
+      <div class="stat">
+        <h2 class="stat-value">4.9</h2>
+        <p class="stat-text">Average customer ratings out of 5.00!</p>
+      </div>
     </div>
 
     <!-- MANAGE -->
     <div class="manage">
-      <h2 class="section-heading">Manage your projects fast</h2>
+      <h2 class="manage-heading">Manage your projects fast</h2>
       <p class="supporting-text">
         With lots of unique blocks, you can easily build a page without coding.
         Build your next landing page.
@@ -121,8 +123,8 @@
       <div class="processes">
         <div class="process">
           <h3 class="manage-number">1</h3>
-          <div>
-            <h4 class="sub-section">Create a project</h4>
+          <div class="manage-text">
+            <h4 class="manage-sub-section">Create a project</h4>
             <p class="feature-p">
               With lots of unique blocks, you can easily build a page without
               coding.
@@ -133,7 +135,7 @@
         <div class="process">
           <h3 class="manage-number">2</h3>
           <div>
-            <h4 class="sub-section">Assign related people</h4>
+            <h4 class="manage-sub-section">Assign related people</h4>
             <p class="feature-p">
               With lots of unique blocks, you can easily build a page without
               coding.
@@ -142,9 +144,9 @@
         </div>
 
         <div class="process">
-          <h3 class="manage-number">2</h3>
+          <h3 class="manage-number">3</h3>
           <div>
-            <h4 class="sub-section">Make it done on-time</h4>
+            <h4 class="manage-sub-section">Make it done on-time</h4>
             <p class="feature-p">
               With lots of unique blocks, you can easily build a page without
               coding.
@@ -158,70 +160,212 @@
     <div class="review-container">
       <div class="reviews">
         <div class="review">
-          <img src="img/img-review-1.svg" alt="review-img" />
+          <img
+            src="img/img-review-1.svg"
+            alt="review-img"
+            class="review-img"
+            width="72px"
+            height="72px"
+          />
           <h3 class="review-heading">"You made is so simple"</h3>
           <p class="review-p">
             My new site is so much faster and easier to work with than my old
             site.
           </p>
-          <h5 class="review-name">Corey Valdez</h5>
+          <h5 class="reviewer">Corey Valdez</h5>
           <p class="review-occupation">Founder at Zenix</p>
         </div>
 
         <div class="review">
-          <img src="img/img-review-1.svg" alt="review-img" />
+          <img
+            src="img/img-review-1.svg"
+            alt="review-img"
+            class="review-img"
+            width="72px"
+            height="72px"
+          />
           <h3 class="review-heading">“Simply the best”</h3>
           <p class="review-p">
             Better than all the rest. I’d recommend this product to beginners.
           </p>
-          <h5 class="review-name">Ian Klein</h5>
+          <h5 class="reviewer">Ian Klein</h5>
           <p class="review-occupation">Digital Marketer</p>
         </div>
       </div>
     </div>
 
     <!-- PRICING & PLAN -->
+
     <div class="pricing-container">
-      <h2 class="section-heading">Pricing & Plans</h2>
-      <p class="supporting-text">
+      <h2 class="pricing-heading">Pricing & Plans</h2>
+      <p class="p-supporting-text">
         With lots of unique blocks, you can easily build a page without coding.
         Build your next landing page.
       </p>
+      <div class="pricing-cards">
+        <div class="pricing-card">
+          <p class="pricing-level">BASIC</p>
+          <h2 class="stat-value">$29</h2>
+          <p class="ptext-1">One time purchase</p>
+          <p class="ptext-2">
+            With lots of unique blocks, you can easily build a page without
+            coding. Build your next landing page.
+          </p>
+          <button class="pricing-btn">Get started for free</button>
+        </div>
 
-      <div class="pricing-card">
-        <p class="pricing-level">BASIC</p>
-        <h2 class="stat-value">$29</h2>
-        <p class="ptext-1">One time purchase</p>
-        <p class="ptext-2">
-          With lots of unique blocks, you can easily build a page without
-          coding. Build your next landing page.
-        </p>
-        <button class="pricing-btn">Get started for free</button>
+        <div class="pricing-card">
+          <p class="pricing-level">STANDARD</p>
+          <h2 class="stat-value">$49</h2>
+          <p class="ptext-1">One time purchase</p>
+          <p class="ptext-2">
+            With lots of unique blocks, you can easily build a page without
+            coding. Build your next landing page.
+          </p>
+          <button class="pricing-btn">Get started for free</button>
+        </div>
+
+        <div class="pricing-card">
+          <p class="pricing-level">PREMIUM</p>
+          <h2 class="stat-value">$99</h2>
+          <p class="ptext-1">One time purchase</p>
+          <p class="ptext-2">
+            With lots of unique blocks, you can easily build a page without
+            coding. Build your next landing page.
+          </p>
+          <button class="pricing-btn">Get started for free</button>
+        </div>
       </div>
 
-      <div class="pricing-card">
-        <p class="pricing-level">STANDARD</p>
-        <h2 class="stat-value">$49</h2>
-        <p class="ptext-1">One time purchase</p>
-        <p class="ptext-2">
-          With lots of unique blocks, you can easily build a page without
-          coding. Build your next landing page.
-        </p>
-        <button class="pricing-btn">Get started for free</button>
-      </div>
+      <!--FAQS -->
 
-      <div class="pricing-card">
-        <p class="pricing-level">PREMIUM</p>
-        <h2 class="stat-value">$99</h2>
-        <p class="ptext-1">One time purchase</p>
-        <p class="ptext-2">
-          With lots of unique blocks, you can easily build a page without
-          coding. Build your next landing page.
-        </p>
-        <button class="pricing-btn">Get started for free</button>
+      <div class="faqs">
+        <div class="faq">
+          <p class="que-mark">?</p>
+          <div class="faq-content">
+            <h4 class="faq-heading">Can I use Albino for my clients?</h4>
+            <p class="p-feature-p">
+              With lots of unique blocks, you can easily build a page without
+              coding. Build your next landing page. Integer ut Oberyn massa. Sed
+              feugiat vitae turpis a porta. Aliquam sagittis interdum
+              Melisandre.
+            </p>
+          </div>
+        </div>
+
+        <div class="faq">
+          <p class="que-mark">?</p>
+          <div class="faq-content">
+            <h4 class="faq-heading">Does it work with WordPress?</h4>
+            <p class="p-feature-p">
+              With lots of unique blocks, you can easily build a page without
+              coding. Build your next landing page. Integer ut Oberyn massa. Sed
+              feugiat vitae turpis a porta. Aliquam sagittis interdum
+              Melisandre.
+            </p>
+          </div>
+        </div>
+
+        <div class="faq">
+          <p class="que-mark">?</p>
+          <div class="faq-content">
+            <h4 class="faq-heading">Do I get free updates?</h4>
+            <p class="p-feature-p">
+              With lots of unique blocks, you can easily build a page without
+              coding. Build your next landing page. Integer ut Oberyn massa. Sed
+              feugiat vitae turpis a porta. Aliquam sagittis interdum
+              Melisandre.
+            </p>
+          </div>
+        </div>
+
+        <div class="faq">
+          <p class="que-mark">?</p>
+          <div class="faq-content">
+            <h4 class="faq-heading">Will you provide support?</h4>
+            <p class="p-feature-p">
+              With lots of unique blocks, you can easily build a page without
+              coding. Build your next landing page. Integer ut Oberyn massa. Sed
+              feugiat vitae turpis a porta. Aliquam sagittis interdum
+              Melisandre.
+            </p>
+          </div>
+        </div>
+        <div class="support">
+          <p class="faq-5">Haven’t got your answer?</p>
+          <a class="faq-link" href="#">Contact our support now</a>
+        </div>
       </div>
     </div>
 
-    <!--PRICING SUBSECTION -->
+    <div class="cta">
+      <div class="cta-text">
+        <h2 class="section-heading">Build better landing page fast</h2>
+        <p class="supporting-text">
+          With lots of unique blocks, you can easily build a page without
+          coding. Build your next landing page.
+        </p>
+      </div>
+      <div class="cta-btn">
+        <button class="cta-btn-1">Learn more &rarr;</button>
+        <button class="cta-btn-2">Get it now &rarr;</button>
+      </div>
+    </div>
+
+    <!--FOOTER -->
+    <footer>
+      <div class="footer-content">
+        <p class="logo">Albino</p>
+        <p class="supporting-text">
+          With lots of unique blocks, you can easily build a page without
+          coding. Build your next landing page.
+        </p>
+        <div class="socials">
+          <img
+            src="img/logo-twitter.svg"
+            alt="twitter-logo"
+            class="social-logo"
+          />
+          <img
+            src="img/logo-facebook.svg"
+            alt="facebook-logo"
+            class="social-logo"
+          />
+          <img
+            src="img/logo-twitter.svg"
+            alt="instagram-logo"
+            class="social-logo"
+          />
+        </div>
+      </div>
+      <div class="footer-content">
+        <p class="footer-heading">Company</p>
+        <a href="#" class="footer-link">About us</a>
+        <a href="#" class="footer-link">Contact us</a>
+        <a href="#" class="footer-link">Careers</a>
+        <a href="#" class="footer-link">Press</a>
+      </div>
+      <div class="footer-content">
+        <p class="footer-heading">Product</p>
+        <a href="#" class="footer-link">Features</a>
+        <a href="#" class="footer-link">Pricing</a>
+        <a href="#" class="footer-link">News</a>
+        <a href="#" class="footer-link">Help desk</a>
+        <a href="#" class="footer-link">Support</a>
+      </div>
+      <div class="footer-content">
+        <p class="footer-heading">Services</p>
+        <a href="#" class="footer-link">Digital Marketing</a>
+        <a href="#" class="footer-link">Content Writing</a>
+        <a href="#" class="footer-link">SEO for Business</a>
+        <a href="#" class="footer-link">UI Design</a>
+      </div>
+      <div class="footer-content">
+        <p class="footer-heading">Legal</p>
+        <a href="#" class="footer-link">Privacy Policy</a>
+        <a href="#" class="footer-link">Terms & Conditions</a>
+        <a href="#" class="footer-link">Return Policy</a>
+      </div>
+    </footer>
   </body>
 </html>
