added explicit img width and hright on the html doc to improve performance

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <button class="btn-2">Learn more</button>
       </div>
       <div class="hero-image">
-        <img src="img/Image.svg" alt="dashboard-image" />
+        <img
+          src="img/Image.svg"
+          alt="dashboard-image"
+          width="73%"
+          height="100%"
+        />
       </div>
 
       <!-- UNIQUE PROPOSITION -->
@@ -86,7 +91,8 @@
           <img
             src="img/gs-img.svg"
             alt="get-started-image"
-            height="487px"
+            width="514px"
+            height="450px"
             class="gs-img"
           />
         </div>
