Adjusted the responsiveness on other devices except mobile

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
       </div>
       <div class="hero-image">
         <img
-          src="img/Image.svg"
+          src="img/Image.png"
           alt="dashboard-image"
-          width="73%"
-          height="100%"
+          width="1824px"
+          height="1270px"
         />
       </div>
 
@@ -124,7 +124,7 @@
       </div>
 
       <div class="manage-1">
-        <img src="img/Img-manage.svg" alt="manage-image" class="manage-image" />
+        <img src="img/Img-manage.png" alt="manage-image" class="manage-image" />
         <div class="processes">
           <div class="process">
             <h3 class="manage-number">1</h3>
