adjusted background color

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
       <button class="nav-btn">Get started</button>
     </div>
-    <div class="content-container">
+    <section class="content-container">
       <h1 class="display">Get things done by awesome remote team</h1>
 
       <p class="supporting-text">
@@ -43,8 +43,9 @@
           height="1270px"
         />
       </div>
-
-      <!-- UNIQUE PROPOSITION -->
+    </section>
+    <!-- UNIQUE PROPOSITION -->
+    <section class="content-container">
       <div class="features">
         <div class="feature">
           <img src="img/code.svg" alt="code-icon" class="feature-icon" />
@@ -79,10 +80,11 @@
           </p>
         </div>
       </div>
-
-      <!-- GETTING STARTED(GS) -->
-      <div class="gs-1">
-        <div class="gs-2">
+    </section>
+    <!-- GETTING STARTED(GS) -->
+    <section class="getting-started">
+      <div class="content-container">
+        <div class="gs">
           <div class="gs-content">
             <h2 class="section-heading">
               Getting started with Albino is easier than ever
@@ -103,8 +105,9 @@
           />
         </div>
       </div>
-
-      <!-- STATISTICS -->
+    </section>
+    <!-- STATISTICS -->
+    <section class="content-container">
       <div class="stats">
         <div class="stat">
           <h2 class="stat-value">1M+</h2>
@@ -119,8 +122,9 @@
           <p class="stat-text">Average customer ratings out of 5.00!</p>
         </div>
       </div>
-
-      <!-- MANAGE -->
+    </section>
+    <!-- MANAGE -->
+    <section class="content-container">
       <div class="manage">
         <h2 class="manage-heading">Manage your projects fast</h2>
         <p class="supporting-text">
@@ -166,48 +170,47 @@
           </div>
         </div>
       </div>
+    </section>
+    <!-- REVIEWS -->
+    <section class="review-container">
+      <div class="content-container reviews">
+        <div class="review">
+          <img
+            src="img/img-review-1.svg"
+            alt="review-img"
+            class="review-img"
+            width="72px"
+            height="72px"
+          />
+          <h3 class="review-heading">"You made is so simple"</h3>
+          <p class="review-p">
+            My new site is so much faster and easier to work with than my old
+            site.
+          </p>
+          <h5 class="reviewer">Corey Valdez</h5>
+          <p class="review-occupation">Founder at Zenix</p>
+        </div>
 
-      <!-- REVIEWS -->
-      <div class="review-container">
-        <div class="reviews">
-          <div class="review">
-            <img
-              src="img/img-review-1.svg"
-              alt="review-img"
-              class="review-img"
-              width="72px"
-              height="72px"
-            />
-            <h3 class="review-heading">"You made is so simple"</h3>
-            <p class="review-p">
-              My new site is so much faster and easier to work with than my old
-              site.
-            </p>
-            <h5 class="reviewer">Corey Valdez</h5>
-            <p class="review-occupation">Founder at Zenix</p>
-          </div>
-
-          <div class="review">
-            <img
-              src="img/img-review-1.svg"
-              alt="review-img"
-              class="review-img"
-              width="72px"
-              height="72px"
-            />
-            <h3 class="review-heading">“Simply the best”</h3>
-            <p class="review-p">
-              Better than all the rest. I’d recommend this product to beginners.
-            </p>
-            <h5 class="reviewer">Ian Klein</h5>
-            <p class="review-occupation">Digital Marketer</p>
-          </div>
+        <div class="review">
+          <img
+            src="img/img-review-1.svg"
+            alt="review-img"
+            class="review-img"
+            width="72px"
+            height="72px"
+          />
+          <h3 class="review-heading">“Simply the best”</h3>
+          <p class="review-p">
+            Better than all the rest. I’d recommend this product to beginners.
+          </p>
+          <h5 class="reviewer">Ian Klein</h5>
+          <p class="review-occupation">Digital Marketer</p>
         </div>
       </div>
-
-      <!-- PRICING & PLAN -->
-
-      <div class="pricing-container">
+    </section>
+    <!-- PRICING & PLAN -->
+    <section class="pricing-container">
+      <div class="content-container">
         <h2 class="pricing-heading">Pricing & Plans</h2>
         <p class="p-supporting-text">
           With lots of unique blocks, you can easily build a page without
@@ -308,7 +311,8 @@
           </div>
         </div>
       </div>
-
+    </section>
+    <section class="content-container">
       <div class="cta">
         <div class="cta-text">
           <h2 class="section-heading">Build better landing page fast</h2>
@@ -322,8 +326,9 @@
           <button class="cta-btn-2">Get it now &rarr;</button>
         </div>
       </div>
-
-      <!--FOOTER -->
+    </section>
+    <!--FOOTER -->
+    <section class="content-container">
       <footer>
         <div class="footer-content-1">
           <p class="footer-logo">Albino</p>
@@ -378,6 +383,6 @@
           <li><a href="#" class="footer-link">Return Policy</a></li>
         </ul>
       </footer>
-    </div>
+    </section>
   </body>
 </html>
