added transition to buttons and applied rem responsive unit

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </section>
     <!-- UNIQUE PROPOSITION -->
     <section class="content-container">
-      <div class="features">
+      <div class="features container">
         <div class="feature">
           <img src="img/code.svg" alt="code-icon" class="feature-icon" />
           <h4 class="sub-section">Project management</h4>
@@ -84,7 +84,7 @@
     <!-- GETTING STARTED(GS) -->
     <section class="getting-started">
       <div class="content-container">
-        <div class="gs">
+        <div class="container">
           <div class="gs-content">
             <h2 class="section-heading">
               Getting started with Albino is easier than ever
@@ -189,6 +189,22 @@
           </p>
           <h5 class="reviewer">Corey Valdez</h5>
           <p class="review-occupation">Founder at Zenix</p>
+        </div>
+
+        <div class="review">
+          <img
+            src="img/img-review-1.svg"
+            alt="review-img"
+            class="review-img"
+            width="72px"
+            height="72px"
+          />
+          <h3 class="review-heading">“Simply the best”</h3>
+          <p class="review-p">
+            Better than all the rest. I’d recommend this product to beginners.
+          </p>
+          <h5 class="reviewer">Ian Klein</h5>
+          <p class="review-occupation">Digital Marketer</p>
         </div>
 
         <div class="review">
