--- a/index.html
+++ b/index.html
@@ -10,19 +10,57 @@
       rel="stylesheet"
     />
     <title>Saas Landing page</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/queries.css" rel="stylesheet" />
   </head>
   <body>
     <!-- NAVIGATION -->
-    <div class="nav-bar">
-      <p class="logo">Albino</p>
-      <nav class="top-nav">
-        <a class="active" href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-      </nav>
-      <button class="nav-btn">Get started</button>
+    <div class="header">
+      <div class="nav-bar">
+        <p class="logo">Albino</p>
+        <div class="main-nav">
+          <nav class="top-nav">
+            <a class="active" href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+          </nav>
+          <button class="nav-btn">Get started</button>
+        </div>
+        <button class="mobile-menu">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="mobile-menu-icon"
+            name="menu-outline"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+            />
+          </svg>
+
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="mobile-menu-icon"
+            name="close-outline"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M6 18 18 6M6 6l12 12"
+            />
+          </svg>
+        </button>
+      </div>
     </div>
     <section class="content-container">
       <h1 class="display">Get things done by awesome remote team</h1>
