did mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <section class="content-container">
       <h1 class="display">Get things done by awesome remote team</h1>
 
-      <p class="supporting-text">
+      <p class="hero supporting-text">
         We share common trends and strategies for improving your rental income
         and making sure you stay in high demand.
       </p>
@@ -82,6 +82,7 @@
         />
       </div>
     </section>
+
     <!-- UNIQUE PROPOSITION -->
     <section class="content-container">
       <div class="features container">
@@ -119,10 +120,11 @@
         </div>
       </div>
     </section>
+
     <!-- GETTING STARTED(GS) -->
     <section class="getting-started">
       <div class="content-container">
-        <div class="container">
+        <div class="gs-container container">
           <div class="gs-content">
             <h2 class="section-heading">
               Getting started with Albino is easier than ever
@@ -383,7 +385,7 @@
     </section>
     <!--FOOTER -->
     <section class="content-container">
-      <footer>
+      <footer class="footer">
         <div class="footer-content-1">
           <p class="footer-logo">Albino</p>
           <p class="footer-supporting-text">
