made some fixes

--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
           </div>
           <div class="support">
             <p class="faq-5">Haven’t got your answer?</p>
-            <a class="faq-link" href="#">Contact our support now</a>
+            <a class="faq-link" href="#">Contact us now</a>
           </div>
         </div>
       </div>
