Did menu functionality with javascript

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Saas Landing page</title>
     <link href="css/style.css" rel="stylesheet" />
     <link href="css/queries.css" rel="stylesheet" />
+    <script defer src="script.js"></script>
   </head>
   <body>
     <!-- NAVIGATION -->
